--- a/part3/phoneBookBackend/package.json
+++ b/part3/phoneBookBackend/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "buildUI": "sh buildUI.sh",
+    "deploy": "sh deploy.sh",
+    "deploy:full": "sh fullDeploy.sh"
   },
   "author": "Anthony Flores",
   "license": "ISC",
