--- a/part3/phoneBookBackend/package.json
+++ b/part3/phoneBookBackend/package.json
@@ -9,7 +9,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "buildUI": "sh buildUI.sh",
     "deploy": "sh deploy.sh",
-    "deploy:full": "sh fullDeploy.sh"
+    "deploy:full": "sh fullDeploy.sh",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "author": "Anthony Flores",
   "license": "ISC",
@@ -22,6 +24,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^7.2.0",
     "nodemon": "^2.0.4"
   }
 }
