--- a/part3/phoneBookBackend/package.json
+++ b/part3/phoneBookBackend/package.json
@@ -11,7 +11,7 @@
     "deploy": "sh deploy.sh",
     "deploy:full": "sh fullDeploy.sh",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint --fix"
   },
   "author": "Anthony Flores",
   "license": "ISC",
