--- a/part4/blogList/package.json
+++ b/part4/blogList/package.json
@@ -4,14 +4,14 @@
   "description": "a nodejs bloglist application",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
     "buildUI": "sh buildUI.sh",
     "deploy": "sh deploy.sh",
     "deploy:full": "sh fullDeploy.sh",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
-    "test": "jest --verbose"
+    "test": "NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "Anthony Flores",
   "license": "ISC",
@@ -27,7 +27,8 @@
   "devDependencies": {
     "eslint": "^7.2.0",
     "jest": "^26.0.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
   },
   "jest": {
     "testEnvironment": "node"
