--- a/part4/blogList/package.json
+++ b/part4/blogList/package.json
@@ -11,7 +11,8 @@
     "deploy:full": "sh fullDeploy.sh",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
-    "test": "NODE_ENV=test jest --verbose --runInBand"
+    "test": "NODE_ENV=test jest --verbose --runInBand",
+    "start:test": "NODE_ENV=test node index.js"
   },
   "author": "Anthony Flores",
   "license": "ISC",
