--- a/part7/bloglist-frontend-E2ETests/package.json
+++ b/part7/bloglist-frontend-E2ETests/package.json
@@ -1,29 +1,13 @@
 {
-  "name": "bloglist-frontend",
+  "name": "bloglist-frontend-e2e_tests",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@artsy/fresnel": "^1.2.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.3.1",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.1.0"
+    "prop-types": "^15.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "eslint": "eslint .",
     "cypress:open": "cypress open"
   },
   "eslintConfig": {
